# Shuddho

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/chrome-extension/: manifest.json  package.json  tsconfig.json
apps/chrome-extension/src/: analyzer.ts  background.ts  content.ts  editable.ts  overlay.ts  popup.html  popup.ts  types.ts
apps/web-editor/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-editor/src/: App.tsx  styles.css
data/corpus/cleaned/: README.md
data/corpus/raw/: README.md  sample_bn.txt
data/datasets/contracts/: README.md  dataset.schema.json
data/datasets/synthetic/: README.md  corrector_train.jsonl  corrector_valid.jsonl  detector_train.jsonl  detector_valid.jsonl
docs/: api-examples.md  architecture.md  bangla-error-taxonomy.md  mvp-roadmap.md  simple-rule.html
ml/corrector/: README.md  model.py  train.py
ml/detector/: README.md  model.py  train.py
ml/evaluation/: README.md  precision_eval.py
ml/ranking/: README.md  pipeline.py
ml/tokenizer/: README.md  loader.py  train_sentencepiece.py
ml/training/: README.md  dataset.py
scripts/: build-extension.mjs  clean_corpus.py  generate_synthetic_errors.py  import_lexicon_to_sqlite.py
shared/constants/: bangla.py
shared/fixtures/: bangla_samples.json  evaluation_cases.jsonl
shared/schemas/: contracts.ts  python_models.py  suggestion.schema.json
shared/utils/: text.py
tests/: test_analyze_flow.py  test_lexicon_import.py  test_ml_scaffolds.py  test_normalizer.py  test_rule_engine.py  test_spell_engine.py
(+21 files in other folders)
